fix: correct .btn-change alignment

--- a/order-summary-component/css/components/buttons.css
+++ b/order-summary-component/css/components/buttons.css
@@ -24,6 +24,7 @@ button {
 .btn-change {
   font: var(--text03-bold);
   color: var(--blue-700);
+  text-align: right;
 }
 
 .btn-change:hover {
